# beta_dist_diff

./: CMakeLists.txt  README.md
src/: beta.cpp  beta.h  main.cpp  python.cpp
